# auto_task_manager

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/auto_task_manager/: bot.py  db.py  gamification.py  main.py  models.py
tests/: test_gamification.py
